--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.7.0",
     "ws": "^8.19.0",
     "xlsx": "^0.18.5"
